--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "a-galaxy-far-far-away",
   "displayName": "A galaxy far, far away",
-  "description": "Themes for Visual Studio Code from a glaxy far, far away...",
+  "description": "A theme for Visual Studio Code from a glaxy far, far away...",
   "version": "1.0.0",
   "publisher": "DanMad",
   "repository": "https://github.com/DanMad/a-galaxy-far-far-away-theme",
@@ -14,14 +14,14 @@
   "contributes": {
     "themes": [
       {
-        "label": "Imperial",
+        "label": "The Empire",
         "uiTheme": "vs-dark",
-        "path": "./themes/imperial-theme.json"
+        "path": "./themes/empire-theme.json"
       },
       {
-        "label": "Rebel",
+        "label": "Rogue Squadron",
         "uiTheme": "vs-dark",
-        "path": "./themes/rebel-theme.json"
+        "path": "./themes/rogue-squadron-theme.json"
       }
     ]
   }
