--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "a-galaxy-far-far-away",
   "displayName": "A galaxy far, far away",
-  "description": "A theme for Visual Studio Code from a glaxy far, far away...",
+  "description": "A theme for Visual Studio Code from a galaxy far, far away...",
   "version": "1.0.0",
   "publisher": "DanMad",
   "repository": "https://github.com/DanMad/a-galaxy-far-far-away-theme",
@@ -24,5 +24,15 @@
         "path": "./themes/rogue-squadron-theme.json"
       }
     ]
+  },
+  "devDependencies": {
+    "husky": "^4.2.3",
+    "prettier": "^1.19.1",
+    "pretty-quick": "^2.0.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
