--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "a-galaxy-far-far-away",
-  "displayName": "A galaxy far, far away",
+  "displayName": "A Galaxy Far, Far Away",
   "description": "A theme for Visual Studio Code from a galaxy far, far away...",
   "version": "1.0.0",
   "publisher": "DanMad",
