Updated installation instructions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "a-galaxy-far-far-away",
-  "displayName": "A Galaxy Far, Far Away",
+  "name": "a-galaxy-far-far-away-theme",
+  "displayName": "A Galaxy Far, Far Away Theme",
   "description": "A theme for Visual Studio Code from a galaxy far, far away...",
   "version": "1.1.0",
   "author": "DanMad",
