Updated package.json. Set 'private' to true to avoid accidental publissh.

--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "a-galaxy-far-far-away-theme",
   "displayName": "A Galaxy Far, Far Away Theme",
   "description": "A theme for Visual Studio Code from a galaxy far, far away...",
-  "icon": "img/icon.png",
-  "version": "2.0.0",
+  "license": "MIT",
   "author": "DanMad",
   "publisher": "DanMad",
-  "license": "MIT",
+  "version": "2.0.0",
+  "private": true,
   "homepage": "https://github.com/DanMad/a-galaxy-far-far-away-theme#readme",
+  "icon": "img/icon.png",
   "keywords": [
+    "A galaxy far, far away",
     "The Clone Army",
     "The Empire",
     "Rogue Squadron",
