--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "version": "2.0.0",
   "private": true,
   "homepage": "https://github.com/DanMad/a-galaxy-far-far-away-theme#readme",
-  "icon": "img/icon.png",
+  "icon": "images/icon.png",
   "keywords": [
     "A galaxy far, far away",
     "The Clone Army",
