--- a/package.json
+++ b/package.json
@@ -55,12 +55,7 @@
     "themes": [
       {
         "label": "The Empire",
-        "path": "./themes/empire-theme.json",
-        "uiTheme": "vs-dark"
-      },
-      {
-        "label": "The Naboo",
-        "path": "./themes/the-naboo.json",
+        "path": "./themes/the-empire-theme.json",
         "uiTheme": "vs-dark"
       },
       {
