--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "a-galaxy-far-far-away-theme",
   "displayName": "A Galaxy Far, Far Away Theme",
   "description": "A theme for Visual Studio Code from a galaxy far, far away...",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "author": "DanMad",
   "publisher": "DanMad",
   "license": "MIT",
   "homepage": "https://github.com/DanMad/a-galaxy-far-far-away-theme#readme",
+  "icon": "img/icon.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/DanMad/a-galaxy-far-far-away-theme"
@@ -18,6 +19,10 @@
     "husky": "^4.2.3",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1"
+  },
+  "galleryBanner": {
+    "color": "#06090e",
+    "theme": "dark"
   },
   "husky": {
     "hooks": {
