--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "a-galaxy-far-far-away-theme",
   "displayName": "A Galaxy Far, Far Away Theme",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "private": true,
   "description": "A theme for Visual Studio Code from a galaxy far, far away...",
   "categories": [
@@ -27,9 +27,12 @@
   "author": "DanMad",
   "publisher": "DanMad",
   "scripts": {
-    "build": "npx vsce package",
-    "deploy": "npx vsce publish",
-    "sort": "npx sort-package-json"
+    "build": "npm run build:the-empire-theme & npm run build:rogue-squadron-theme",
+    "build:rogue-squadron-theme": "json-stringify src/rogue-squadron-beta-theme.js --out themes/rogue-squadron-beta-theme.json",
+    "build:the-empire-theme": "json-stringify src/the-empire-theme.js --out themes/the-empire-theme.json",
+    "package": "npx vsce package",
+    "publish": "npx vsce publish",
+    "sort": "sort-package-json"
   },
   "contributes": {
     "themes": [
@@ -52,8 +55,10 @@
   },
   "devDependencies": {
     "husky": "^4.2.3",
+    "json-stringify-cli": "^1.0.1",
     "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1",
+    "sort-package-json": "^1.44.0",
     "vsce": "^1.74.0"
   },
   "engines": {
