--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
   "author": "DanMad",
   "publisher": "DanMad",
   "scripts": {
-    "build": "npm run build:the-empire-theme & npm run build:rogue-squadron-theme",
+    "build": "npm run build:the-empire-theme & npm run build:the-naboo-theme & npm run build:rogue-squadron-theme",
     "build:rogue-squadron-theme": "json-stringify src/rogue-squadron-theme.js --out themes/rogue-squadron-theme.json",
     "build:the-empire-theme": "json-stringify src/the-empire-theme.js --out themes/the-empire-theme.json",
+    "build:the-naboo-theme": "json-stringify src/the-naboo-theme.js --out themes/the-naboo-theme.json",
     "package": "npx vsce package",
     "publish": "npx vsce publish",
     "sort": "sort-package-json"
