--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,8 +1,14 @@
-# Directories
-/src/
+# Dependencies
+/node_modules/
 
 # Git
 .gitignore
 
+# OS
+.DS_Store
+
 # Settings
-.vscode/**
+/.vscode/
+
+# Source
+/src/
