--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
   "engines": {
     "vscode": "^1.42.0"
   },
-  "icon": "images/icon.png",
+  "icon": "icon.png",
   "galleryBanner": {
     "color": "#04070b",
     "theme": "dark"
