--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "author": "DanMad",
   "publisher": "DanMad",
   "scripts": {
-    "build": "npm run build:the-empire-theme && npm run build:rogue-squadron-theme && npm run sort-package",
+    "build": "npm run build:the-empire-theme && npm run build:rogue-squadron-theme",
     "build:rogue-squadron-theme": "json-stringify src/rogue-squadron-theme.js --out themes/rogue-squadron-theme.json",
     "build:the-empire-theme": "json-stringify src/the-empire-theme.js --out themes/the-empire-theme.json",
     "package": "npx vsce package",
@@ -52,14 +52,17 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged"
+      "pre-commit": "lint-staged"
     }
+  },
+  "lint-staged": {
+    "**/*": "prettier --write"
   },
   "devDependencies": {
     "husky": "^4.3.0",
     "json-stringify-cli": "^1.0.1",
+    "lint-staged": "^10.4.2",
     "prettier": "^1.19.1",
-    "pretty-quick": "^2.0.2",
     "sort-package-json": "^1.46.0",
     "vsce": "^1.80.0"
   },
