--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
   "author": "DanMad",
   "publisher": "DanMad",
   "scripts": {
-    "build": "npm run build:the-empire-theme && npm run build:rogue-squadron-theme",
+    "build": "yarn build:the-empire-theme && yarn build:rogue-squadron-theme",
     "build:rogue-squadron-theme": "json-stringify src/rogue-squadron-theme.js --out themes/rogue-squadron-theme.json",
     "build:the-empire-theme": "json-stringify src/the-empire-theme.js --out themes/the-empire-theme.json",
     "package": "npx vsce package",
+    "prepare": "husky install",
     "publish": "npx vsce publish",
     "sort-package": "sort-package-json"
   },
@@ -50,19 +51,11 @@
       }
     ]
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "**/*": "prettier --write"
-  },
   "devDependencies": {
-    "husky": "^4.3.0",
+    "husky": "^6.0.0",
     "json-stringify-cli": "^1.0.1",
     "lint-staged": "^10.4.2",
-    "prettier": "^1.19.1",
+    "prettier": "^2.2.1",
     "sort-package-json": "^1.46.0",
     "vsce": "^1.80.0"
   },
