--- a/package.json
+++ b/package.json
@@ -18,13 +18,8 @@
     "VSCode"
   ],
   "homepage": "https://marketplace.visualstudio.com/items?itemName=DanMad.a-galaxy-far-far-away-theme",
-  "bugs": {
-    "url": "https://github.com/DanMad/a-galaxy-far-far-away-theme/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/DanMad/a-galaxy-far-far-away-theme"
-  },
+  "bugs": "https://github.com/DanMad/a-galaxy-far-far-away-theme/issues",
+  "repository": "https://github.com/DanMad/a-galaxy-far-far-away-theme.git",
   "license": "MIT",
   "author": "DanMad",
   "publisher": "DanMad",
