Audited package scripts and GitHub Actions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release VSCode Theme
+name: Release Theme
 
 on:
   push:
@@ -7,20 +7,26 @@ on:
 
 jobs:
   release:
-    name: Release
+    name: Release Theme
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout main
         uses: actions/checkout@v2
         with:
           ref: main
+      - name: Install Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 'lts/fermium'
+      - name: Remove 'node_modules'
+        run: rm -rf node_modules/**
       - name: Install Yarn
-        run: npm install --global yarn@1.22.10
-      - name: Setup CI
-        run: yarn ci
+        run: npm install --global yarn
+      - name: Configure CI
+        run: yarn install --frozen-lockfile
       - name: Build
         run: yarn build
-      - name: Release
-        run: yarn package && yarn publish
+      - name: Publish
+        run: yarn publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
