--- a/package.json
+++ b/package.json
@@ -24,12 +24,10 @@
   "author": "DanMad",
   "publisher": "DanMad",
   "scripts": {
-    "build": "yarn build:the-empire-theme && yarn build:rogue-squadron-theme",
-    "build:rogue-squadron-theme": "json-stringify src/rogue-squadron-theme.js --out themes/rogue-squadron-theme.json",
-    "build:the-empire-theme": "json-stringify src/the-empire-theme.js --out themes/the-empire-theme.json",
-    "package": "npx vsce package",
-    "publish": "npx vsce publish",
-    "sort-package": "sort-package-json"
+    "build": "rm -rf themes/** && yarn build:the-empire-theme && yarn build:rogue-squadron-theme",
+    "build:rogue-squadron-theme": "json-stringify src/rogue-squadron-theme.js -o themes/rogue-squadron-theme.json",
+    "build:the-empire-theme": "json-stringify src/the-empire-theme.js -o themes/the-empire-theme.json",
+    "publish": "vsce publish"
   },
   "contributes": {
     "themes": [
