--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "keywords": [
     "a11y",
-    "Dark theme",
+    "Dark Theme",
     "The Empire",
     "Rogue Squadron",
     "Star Wars",
@@ -47,7 +47,7 @@
   "devDependencies": {
     "husky": "^7.0.1",
     "json-stringify-cli": "^1.0.1",
-    "lint-staged": "^11.0.0",
+    "lint-staged": "^11.0.1",
     "prettier": "^2.2.1",
     "sort-package-json": "^1.46.0",
     "vsce": "^1.95.1"
