Added format script

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "build": "rm -rf themes && mkdir themes && yarn build:the-empire-theme && yarn build:rogue-squadron-theme",
     "build:rogue-squadron-theme": "json-stringify src/rogue-squadron-theme.js -o themes/rogue-squadron-theme.json",
     "build:the-empire-theme": "json-stringify src/the-empire-theme.js -o themes/the-empire-theme.json",
+    "format": "sort-package-json && prettier --write \"**/*\"",
     "publish": "vsce publish"
   },
   "contributes": {
