--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
   "publisher": "DanMad",
   "scripts": {
     "bootstrap": "rm -rf node_modules && yarn install && husky install && chmod +x .husky/*",
-    "build": "rm -rf themes && mkdir themes && yarn build:the-empire-theme && yarn build:rogue-squadron-theme",
-    "build:rogue-squadron-theme": "json-stringify src/rogue-squadron-theme.js -o themes/rogue-squadron-theme.json",
-    "build:the-empire-theme": "json-stringify src/the-empire-theme.js -o themes/the-empire-theme.json",
+    "build": "rm -rf themes && mkdir themes && json-stringify src/the-empire-theme.js -o themes/the-empire-theme.json && json-stringify src/rogue-squadron-theme.js -o themes/rogue-squadron-theme.json",
     "deploy": "vsce publish",
     "format": "sort-package-json && prettier --write \"**/*\""
   },
@@ -51,10 +49,10 @@
   "devDependencies": {
     "husky": "^7.0.1",
     "json-stringify-cli": "^1.0.1",
-    "lint-staged": "^11.0.1",
+    "lint-staged": "^11.1.1",
     "prettier": "^2.2.1",
     "sort-package-json": "^1.46.0",
-    "vsce": "^1.95.1"
+    "vsce": "^1.96.1"
   },
   "engines": {
     "vscode": "^1.42.0"
