--- a/.github/workflows/master-push.yml
+++ b/.github/workflows/master-push.yml
@@ -17,11 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          ref: ${{ github.event.pull_request.head.ref }}
       - uses: actions/setup-node@v2
-        with:
-          node-version: 'lts/fermium'
       - run: chmod +x .github/create-github-release
       - run: .github/create-github-release
   create_vscode_release:
@@ -30,13 +26,10 @@ jobs:
     needs: create_github_release
     steps:
       - uses: actions/checkout@v2
-        with:
-          ref: ${{ github.event.pull_request.head.ref }}
       - uses: actions/setup-node@v2
-        with:
-          node-version: 'lts/fermium'
-      - run: rm -rf node_modules
-      - run: npm install --global yarn
-      - run: yarn install --frozen-lockfile
-      - run: yarn build
-      - run: yarn deploy -p $VSCE_TOKEN
+      - run: |
+        rm -rf node_modules
+        npm install --global yarn
+        yarn install --frozen-lockfile
+        yarn build
+        yarn deploy -p $VSCE_TOKEN
