--- a/.github/workflows/master-push.yml
+++ b/.github/workflows/master-push.yml
@@ -16,18 +16,20 @@ jobs:
     name: Create GitHub Release
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-      - run: chmod +x .github/create-github-release
-      - run: .github/create-github-release
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
+    - run: |
+        chmod +x .github/create-github-release
+        .github/create-github-release
+
   create_vscode_release:
     name: Create VSCode Release
     runs-on: ubuntu-latest
     needs: create_github_release
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-      - run: |
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
+    - run: |
         rm -rf node_modules
         npm install --global yarn
         yarn install --frozen-lockfile
