--- a/.github/workflows/master-pull-request.yml
+++ b/.github/workflows/master-pull-request.yml
@@ -18,5 +18,5 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v2
     - run: |
-        chmod +x .github/check-package-version
-        .github/check-package-version
+        chmod +x .github/scripts/check-package-version.sh
+        .github/scripts/check-package-version.sh
