--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,11 @@
+# Asset files
+*.gif
+*.ico
+*.jpg
+*.jpeg
+*.png
+*.svg
+
 # Dependencies
 node_modules/
 
@@ -7,13 +15,6 @@ node_modules/
 
 # Ignore files
 .*ignore
-
-# Image files
-*.gif
-*.ico
-*.jpg
-*.jpeg
-*.png
 
 # License
 LICENSE
