--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "a-galaxy-far-far-away-theme",
   "displayName": "A Galaxy Far, Far Away Theme",
-  "version": "3.3.0",
+  "version": "3.3.1",
   "private": true,
   "description": "A Visual Studio Code theme from a galaxy far, far away...",
   "categories": [
-    "Themes",
-    "Other"
+    "Other",
+    "Themes"
   ],
   "keywords": [
     "a11y",
@@ -17,14 +17,11 @@
     "Theme",
     "VSCode"
   ],
-  "homepage": "https://marketplace.visualstudio.com/items?itemName=DanMad.a-galaxy-far-far-away-theme",
-  "bugs": "https://github.com/DanMad/a-galaxy-far-far-away-theme/issues",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/DanMad/a-galaxy-far-far-away-theme.git"
-  },
+  "homepage": "https://marketplace.visualstudio.com/items?itemName=danmad.a-galaxy-far-far-away-theme",
+  "bugs": "https://github.com/danmad/a-galaxy-far-far-away-theme/issues",
+  "repository": "https://github.com/danmad/a-galaxy-far-far-away-theme.git",
   "license": "MIT",
-  "author": "DanMad",
+  "author": "DanMad <hooky.mounted_0n@icloud.com>",
   "publisher": "DanMad",
   "scripts": {
     "bootstrap": "yarn install",
@@ -35,13 +32,13 @@
   "contributes": {
     "themes": [
       {
-        "label": "The Empire",
-        "path": "./themes/the-empire-theme.json",
+        "label": "Rogue Squadron",
+        "path": "./themes/rogue-squadron-theme.json",
         "uiTheme": "vs-dark"
       },
       {
-        "label": "Rogue Squadron",
-        "path": "./themes/rogue-squadron-theme.json",
+        "label": "The Empire",
+        "path": "./themes/the-empire-theme.json",
         "uiTheme": "vs-dark"
       }
     ]
