Updated GitHub Workflow

--- a/.github/workflows/master-push.yml
+++ b/.github/workflows/master-push.yml
@@ -33,4 +33,4 @@ jobs:
         npm install --global yarn
         yarn bootstrap --frozen-lockfile
         yarn build
-        vsce publish -p $VSCE_TOKEN
+        yarn vsce publish -p $VSCE_TOKEN
